# Dennett-AI-Agent-Hub

./: .gitignore  .pre-commit-config.yaml  README.md  pytest.ini
.github/workflows/: lint.yml
agent_system/: SDK_README.md  main.py
agent_system/core_sdk/: BUNDLED_MANIFEST.json  enums.py  init.py  models.py  worker_wrapper.py
agent_system/core_sdk/plugins/: __init__.py
agent_system/core_sdk/runtime/: ast_validator.py  compatibility.py  init.py  runtime_resolver.py
agent_system/dennett/core/: recovery.py
agent_system/dennett/workers/: __init__.py
apps/agent_system/: requirements.txt  storage.db  test_sdk_quick.py
apps/agent_system/core_sdk/: context.py
apps/agent_system/dennett/: DENNETT_PLAN.md  __init__.py
apps/agent_system/plugins/: init.py
apps/ai-core/: CLAUDE.md  env.template  start.sh
apps/ai_core/: CLAUDE.md  requirements.txt  start.sh
apps/dennett-app/: package-lock.json  package.json  tsconfig.json  vite.config.ts
backend/: CLAUDE.md  env.template  requirements-dev.txt  requirements.txt  start.sh
backend/.claude/: settings.local.json
backend/tests/: README.md  test_huggingface_service.py
docs/: migration-backend-to-ai-core.md
docs/api/: README.md  error-handling.md  typescript-interfaces.md
etc/: config.yaml  first_model.py  script.py  second_model.py
etc/etc/: __init__.py  agent_executor.py  agent_executor_guide.py  agent_executor_tests.py  production_example.py  requirements.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/commands/: mod.rs  models.rs
frontend/src-tauri/src/database/: connection.rs  mod.rs  models.rs
(+141 files in other folders)
